--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Access-button {
+  align-items: flex-start;
+  justify-content: flex-end;
 }
 
 .App-link {
@@ -36,3 +40,8 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+
+
